<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.rolfje.anonimatron</groupId>
    <artifactId>anonimatron</artifactId>
    <version>1.16-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>anonimatron</name>
    <description>Database and file anonymization tool which is consistent between runs.</description>
    <url>https://realrolfje.github.io/anonimatron/</url>

    <licenses>
        <license>
            <name>The MIT License (MIT)</name>
            <url>https://github.com/realrolfje/anonimatron/blob/master/LICENSE.md</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Rolf</name>
            <organizationUrl>https://github.com/realrolfje</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com:realrolfje/anonimatron.git</connection>
        <developerConnection>scm:git:ssh://github.com:realrolfje/anonimatron.git</developerConnection>
        <url>https://github.com/realrolfje/anonimatron</url>
    </scm>

    <distributionManagement>
        <!-- Distribution management urls as described in
         https://issues.sonatype.org/browse/OSSRH-39766?focusedCommentId=480509&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-480509
         and
         http://central.sonatype.org/pages/apache-maven.html#performing-a-snapshot-deployment
         -->
        <snapshotRepository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>sonatype-release</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.jacoco.reportpath>${project.build.directory}/site/jacoco/jacoco.xml</sonar.jacoco.reportpath>
        <maven.compiler.release>9</maven.compiler.release>
        <java_version>1.9</java_version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.6.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.iban4j</groupId>
            <artifactId>iban4j</artifactId>
            <version>3.2.7-RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.castor</groupId>
            <artifactId>castor-xml</artifactId>
            <version>1.4.1</version>
        </dependency>
        <dependency>
            <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>7.2.2.jre8</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <!-- exclude>log4j.xml</exclude -->
                </excludes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/java</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <!-- exclude>log4j.xml</exclude -->
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${java_version}</source>
                    <target>${java_version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.4</version>
                <configuration>
                    <argLine>
                        --add-opens java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <stylesheetfile>${basedir}/src/javadoc/stylesheet.css</stylesheetfile>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <descriptors>
                        <descriptor>${basedir}/src/main/assembly/anonimatronbin.xml</descriptor>
                    </descriptors>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <!-- Create distribution when executing "mvn package" -->
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>assembly</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <!--
                To release to the central maven repo or sonatype Nexus, use this profile:
                mvn clean deploy -P release
             -->
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <!-- Signs all deployable artifacts during "verify" stage -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <!-- realrolfje@users.noreply.github.com -->
                                    <!-- new key, replaces the old key -->
                                    <keyname>45E2A5E085182DC26EFEF6E796BB2760490D54DD</keyname>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>anonimatron-sonar</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.11</version>
                        <configuration>
                            <append>true</append>
                        </configuration>
                        <executions>
                            <execution>
                                <id>jacoco-initialize</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>jacoco-site</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <!--
                            In order for sonar to work you need a profile in your .m2/setting.xml
                            with the id anonimatron-sonar and the proprties:
                                    <sonar.projectKey>realrolfje_anonimatron</sonar.projectKey>
                                    <sonar.organization>realrolfje</sonar.organization>
                                    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                                    <sonar.login>****KEY****</sonar.login>

                             Then run:  mvn verify sonar:sonar -Panonimatron-sonar

                             Access the report at: https://sonarcloud.io/dashboard?id=realrolfje_anonimatron
                        -->
                        <groupId>org.sonarsource.scanner.maven</groupId>
                        <artifactId>sonar-maven-plugin</artifactId>
                        <version>3.10.0.2594</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
